--- a/contact.html
+++ b/contact.html
@@ -127,6 +127,10 @@
 
         /* Media Queries for Responsive Design */
         @media (max-width: 768px) {
+            .container {
+                flex-direction: column;
+                align-items: stretch;
+            }
              nav ul {
                 display: none;
                 flex-direction: column;
@@ -177,6 +181,9 @@
             }
             .welcome {
                 font-size: 1.5em;
+            }
+             .contact-form {
+                padding: 20px;
             }
         }
             
