--- a/about.html
+++ b/about.html
@@ -57,18 +57,14 @@
         }
 
         @media (max-width: 768px) {
-            nav ul {
-                display: none;
-                flex-direction: column;
-                width: 100%;
+            .menu-item {
+                flex: 1 1 calc(100% - 20px);
             }
-
-            nav ul.active {
-                display: flex;
+            .welcome {
+                font-size: 1.5em;
             }
-
-            .mobile-menu-btn {
-                display: block;
+             .contact-form {
+                padding: 20px;
             }
         }
 
