--- a/about.html
+++ b/about.html
@@ -57,14 +57,19 @@
         }
 
         @media (max-width: 768px) {
-            .menu-item {
-                flex: 1 1 calc(100% - 20px);
+            @media (max-width: 768px) {
+            nav ul {
+                display: none;
+                flex-direction: column;
+                width: 100%;
             }
-            .welcome {
-                font-size: 1.5em;
+
+            nav ul.active {
+                display: flex;
             }
-             .contact-form {
-                padding: 20px;
+
+            .mobile-menu-btn {
+                display: block;
             }
         }
 
@@ -118,20 +123,6 @@
             font-size: 16px;
             line-height: 1.6;
             color: #666;
-        }
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            margin-top: 20px;
-        }
-        footer a {
-            color: #4CAF50;
-            text-decoration: none;
-        }
-        footer a:hover {
-            text-decoration: underline;
         }
 
         @media (max-width: 768px) {
