--- a/about.html
+++ b/about.html
@@ -17,16 +17,16 @@
             padding: 10px 0;
         }
 
-        .container {
-            width: 90%;
-            margin: 0 auto;
+       header .container {
             display: flex;
+            
+            padding: 0 20px;
             justify-content: space-between;
             align-items: center;
         }
 
-        .logo img {
-            width: 150px;
+        header .logo img {
+            width: 40px;
         }
 
         nav ul {
