--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@
             
             padding: 0 20px;
             justify-content: space-between;
-            align-items: center;
+         
         }
 
         header .logo img {
-            width: 40px;
+            height: 40px;
         }
 
         nav ul {
