--- a/contact.html
+++ b/contact.html
@@ -124,6 +124,12 @@
         footer a:hover {
             text-decoration: underline;
         }
+         .mobile-menu-btn {
+            display: none;
+            font-size: 24px;
+            cursor: pointer;
+            color: #fff;
+        }
 
         /* Media Queries for Responsive Design */
         @media (max-width: 768px) {
