--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             padding: 10px 0;
         }
 
-        .container {
+       header .container {
             width: 90%;
             margin: 0 auto;
             display: flex;
@@ -26,7 +26,7 @@
             align-items: center;
         }
 
-        .logo img {
+       header .logo img {
             width: 150px;
         }
 
