--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
         }
 
        header .container {
-            width: 90%;
-            margin: 0 auto;
+           padding: 0 px 20px;
+           
             display: flex;
             justify-content: space-between;
             align-items: center;
