--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         }
 
        header .container {
-           padding: 0 px 20px;
+           padding: 0 20px;
            
             display: flex;
             justify-content: space-between;
