--- a/about.html
+++ b/about.html
@@ -76,6 +76,23 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
+        /* Footer Styles */
+        footer {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
+
+        footer a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
 
         @media (max-width: 768px) {
             .container {
