--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         }
        .slider {
             position: relative;
-            max-width: 50%;
+            max-width: auto;
             margin: 20px auto;
-            max-height: 10%;
+            max-height: auto;
         } 
         .slides img {
             width: 100%;
