--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             position: relative;
             max-width: auto;
             margin: 20px auto;
-            max-height: auto;
+            max-height: 10%;
         } 
         .slides img {
             width: 100%;
