--- a/index.html
+++ b/index.html
@@ -63,10 +63,14 @@
         }
        .slider {
             position: relative;
-            max-width: auto;
+            max-width: 100%;
             margin: 20px auto;
-            max-height: 50%;
-        } 
+            overflow: hidden;
+        }
+        .slides {
+            display: flex;
+            transition: transform 0.5s ease-in-out;
+        }
         .slides img {
             width: 100%;
             display: none;
