--- a/index.html
+++ b/index.html
@@ -251,13 +251,14 @@
     
     <main>
         <div class="slider">
-        <div class="slides">
-            <img src="slide1.jpg" class="active" alt="Slide 1">
-            <div class="welcome">Welcome to Banjos</div>
-            <img src="slide2.jpg" alt="Slide 2">
-            <img src="slide3.jpg" alt="Slide 3">
-        </div>
-    </div>
+            <div class="slides">
+                <img src="slide1-url.jpg" alt="Slide 1" class="active">
+                <img src="slide2-url.jpg" alt="Slide 2">
+                <img src="slide3-url.jpg" alt="Slide 3">
+            </div>
+            <div class="welcome">
+                <h1>Welcome to Banjo's the food Chain</h1>
+            </div>
 
         <div class="menu">
             <div class="menu-category" onclick="toggleMenu('beverages')">Beverages</div>
