--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <div class="welcome">
                 <h1>Welcome to Banjo's the food Chain</h1>
             </div>
-
+        </div>
         <div class="menu">
             <div class="menu-category" onclick="toggleMenu('beverages')">Beverages</div>
             <div class="menu-items" id="beverages">
