--- a/index.html
+++ b/index.html
@@ -230,18 +230,23 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="logo">
-                <img src="logo-url.png" alt="Logo">
+        <main>
+        <div class="slider">
+            <div class="slides">
+                <img src="slide1-url.jpg" alt="Slide 1" class="active">
+                <div class="slide">
+                    <img src="slide2-url.jpg" alt="Slide 2">
+                    <div class="welcome">
+                        <h1>Welcome to Banjo's the food Chain</h1>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="slide3-url.jpg" alt="Slide 3">
+                    <div class="welcome">
+                        <h1>Welcome to Banjo's the food Chain</h1>
+                    </div>
+                </div>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</div>
         </div>
     </header>
 
