--- a/index.html
+++ b/index.html
@@ -230,18 +230,19 @@
 </head>
 <body>
     <header>
-        
-        <div class="slider">
-            <div class="slides">
-                <img src="slide1-url.jpg" alt="Slide 1" class="active">
-                <img src="slide2-url.jpg" alt="Slide 2">
-                <img src="slide3-url.jpg" alt="Slide 3">
+     <div class="container">
+            <div class="logo">
+                <img src="logo-url.png" alt="Logo">
             </div>
-            <div class="welcome">
-                <h1>Welcome to Banjo's the food Chain</h1>
-            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html#home">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</div>
         </div>
-       
     </header>
 
 
