--- a/index.html
+++ b/index.html
@@ -239,8 +239,11 @@
                     <li><a href="index.html#home">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="Career.html">Career</a></li>
+                    <li><a href="Gallery.html">Gallery</a></li>
                     <li><a href="login.html">Login</a></li>
-                    <li><a href="signup.html">Signup</a></li>
+                    <li><a href="SignUp.html">Signup</a></li>
+                    
                 </ul>
             </nav>
             <div class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</div>
