--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
                     <li><a href="index.html#home">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="Gallery.html">Gallery</a></li>
+                    <li><a href="cart.html">Cart</a></li> <!-- Added Cart option -->
                     <li><a href="Career.html">Career</a></li>
                     <li><a href="login.html">Login</a></li>
                     <li><a href="SignUp.html">Signup</a></li>
