--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <title>Banjos</title>
     <style>
         body {
@@ -239,10 +241,11 @@
                     <li><a href="index.html#home">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="Gallery.html">Gallery</a></li>
-                    <li><a href="cart.html">Cart</a></li> <!-- Added Cart option -->
+                    <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li> <!-- Cart icon added -->
                     <li><a href="Career.html">Career</a></li>
                     <li><a href="login.html">Login</a></li>
                     <li><a href="SignUp.html">Signup</a></li>
+                    
                     
                 </ul>
             </nav>
