--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
      <div class="container">
             <div class="logo">
                 <img src="logo-url.png" alt="Logo">
+                <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li> <!-- Cart icon added -->
             </div>
             <nav>
                 <ul>
