--- a/index.html
+++ b/index.html
@@ -251,7 +251,9 @@
                     
                 </ul>
             </nav>
-            <div class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</div>
+            <div class="mobile-menu-btn" onclick="toggleMobileMenu()"><i class="fas fa-shopping-cart"></i></div>
+         <div class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</div>
+         
         </div>
     </header>
 
