--- a/index.html
+++ b/index.html
@@ -162,6 +162,14 @@
             cursor: pointer;
             color: #fff;
         }
+        .mobile-menu-btn {
+    margin-right: 10px; /* Adjust the value according to your design */
+}
+
+.mobile-menu-btn:nth-child(2) {
+    margin-left: 10px; /* Adjust the value according to your design */
+}
+
         footer {
             background: #333;
             color: #fff;
