--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 
             </nav>
          <div class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</div>
-           <li> <div class="mobile-menu-btn1"  <a href="cart.html"><i class="fas fa-shopping-cart"></i></a></div></li> 
+         \<div class="mobile-menu-btn1"  <a href="cart.html"><i class="fas fa-shopping-cart"></i></a></div></li> 
         </div>
     </header>
     <main>
