--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </nav>
          <div class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</div>
          <div class="mobile-menu-btn1">
-    <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+    <a href="cart.html"><i class="fas fa-shopping-cart" id="cart-icon"></i></a>
         </div>
     </header>
     <main>
