--- a/about.html
+++ b/about.html
@@ -248,7 +248,11 @@
                 <ul>
                     <li><a href="index.html#home">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="Gallery.html">Gallery</a></li>
+                    <li><a href="Career.html">Career</a></li>
+                    <li><a href="login.html">Login</a></li>
+                    <li><a href="SignUp.html">Signup</a></li>
+                    <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li> <!-- Cart icon added -->
                 </ul>
             </nav>
             <div class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</div>
