--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="Career.html">Career</a></li>
                     <li><a href="login.html">Login</a></li>
                     <li><a href="SignUp.html">Signup</a></li>
-                    <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li> <!-- Cart icon added -->
+                    <li><a href="cart.html"><i class="fas fa-shopping-cart" id="cart-icon1" ></i></a></li> <!-- Cart icon added -->
                     
                 </ul>
                 
