--- a/Cart.html
+++ b/Cart.html
@@ -320,6 +320,35 @@
     
 </head>
 <body>
+
+
+
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img src="logo-url.png" alt="Logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html#home">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="Gallery.html">Gallery</a></li>
+                    <li><a href="Career.html">Career</a></li>
+                    <li><a href="login.html">Login</a></li>
+                    <li><a href="SignUp.html">Signup</a></li>
+                    <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li> <!-- Cart icon added -->
+                </ul>
+            </nav>
+            <div class="mobile-menu-btn" onclick="toggleMobileMenu()">☰</div>
+        </div>
+    </header>
+
+
+
+
+
+
+    
     <div class="cart" id="cart">
         <h2>Cart</h2>
         <div id="cart-items"></div>
