--- a/Cart.html
+++ b/Cart.html
@@ -406,5 +406,14 @@
 
         displayCart();
     </script>
+
+<script>
+        function toggleMobileMenu() {
+            const nav = document.querySelector('nav ul');
+            nav.classList.toggle('active');
+        }
+    </script>
+
+    
 </body>
 </html>
