--- a/Cart.html
+++ b/Cart.html
@@ -298,6 +298,29 @@
             }
         }
 
+
+     /* Additional Styles */
+        .address-form {
+            margin-top: 20px;
+            background-color: #f4f4f4;
+            padding: 20px;
+            border-radius: 5px;
+        }
+        .address-form label {
+            display: block;
+            margin: 10px 0 5px;
+            font-size: 16px;
+            color: #333;
+        }
+        .address-form input {
+            width: 1350px;
+            padding: 10px;
+            margin: 5px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
       
 
         @media (max-width: 550px) {
