--- a/Cart.html
+++ b/Cart.html
@@ -83,7 +83,7 @@
             color: #333;
         }
         .address-form input {
-            width: 1350px;
+            width: 95%;
             padding: 10px;
             margin: 5px 0;
             border: 1px solid #ccc;
