--- a/Cart.html
+++ b/Cart.html
@@ -327,7 +327,8 @@
             <input type="text" id="mobile" placeholder="Mobile Number" required>
             <label for="pincode">Pincode</label>
             <input type="text" id="pincode" placeholder="Pincode" required>
-            <button onclick="saveAddress()">Save Address</button>
+            <!-- 
+            <button onclick="saveAddress()">Save Address</button>-->
         </div>
         
         <h2>Cart</h2>
