--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
     </div>
     <button class="add-to-cart" onclick="addToCart('kitkat-milkshake-url.jpg', 'Kitkat Milkshake', 139, 'quantity-kitkat-milkshake')">Add to Cart</button>
 </div>
+<div class="menu-category" onclick="toggleMenu('sandwiches')">Sandwiches</div>
 <div class="menu-item">
     <img src="chilli-garlic-toast-url.jpg" alt="Chilli Garlic Toast">
     <h3>Chilli Garlic Toast</h3>
@@ -288,6 +289,7 @@
     </div>
     <button class="add-to-cart" onclick="addToCart('veggie-delight-url.jpg', 'Veggie Delight', 119, 'quantity-veggie-delight')">Add to Cart</button>
 </div>
+<div class="menu-category" onclick="toggleMenu('pizza')">Pizza</div>
 <div class="menu-item">
     <img src="regular-pizza-url.jpg" alt="Regular Pizza">
     <h3>Regular Pizza</h3>
@@ -365,6 +367,7 @@
     </div>
     <button class="add-to-cart" onclick="addToCart('sweet-corn-double-cheese-url.jpg', 'Sweet Corn Double Cheese', 139, 'quantity-sweet-corn-double-cheese')">Add to Cart</button>
 </div>
+<div class="menu-category" onclick="toggleMenu('banjos')">Banjos</div>
 <div class="menu-item">
     <img src="potato-cheese-banjo-url.jpg" alt="Potato Cheese Banjo">
     <h3>Potato Cheese Banjo</h3>
@@ -409,6 +412,7 @@
     </div>
     <button class="add-to-cart" onclick="addToCart('jain-banjo-url.jpg', 'Jain Banjo', 119, 'quantity-jain-banjo')">Add to Cart</button>
 </div>
+<div class="menu-category" onclick="toggleMenu('momos')">Momos</div>
 <div class="menu-item">
     <img src="steamed-momos-url.jpg" alt="Steamed Momos">
     <h3>Steamed Momos</h3>
@@ -453,6 +457,7 @@
     </div>
     <button class="add-to-cart" onclick="addToCart('peri-peri-momos-url.jpg', 'Peri Peri Momos', 89, 'quantity-peri-peri-momos')">Add to Cart</button>
 </div>
+<div class="menu-category" onclick="toggleMenu('burgers')">Burgers</div>
 <div class="menu-item">
     <img src="veg-burger-url.jpg" alt="Veg Burger">
     <h3>Veg Burger</h3>
@@ -486,6 +491,7 @@
     </div>
     <button class="add-to-cart" onclick="addToCart('paneer-burger-url.jpg', 'Paneer Burger', 89, 'quantity-paneer-burger')">Add to Cart</button>
 </div>
+<div class="menu-category" onclick="toggleMenu('rolls')">Rolls</div>
 <div class="menu-item">
     <img src="veg-roll-url.jpg" alt="Veg Roll">
     <h3>Veg Roll</h3>
