--- a/index.html
+++ b/index.html
@@ -233,8 +233,11 @@
     </div>
     <button class="add-to-cart" onclick="addToCart('kitkat-milkshake-url.jpg', 'Kitkat Milkshake', 139, 'quantity-kitkat-milkshake')">Add to Cart</button>
 </div>
+
+
+                
 <div class="menu-category" onclick="toggleMenu('sandwiches')">Sandwiches</div>
-<div class="menu-item">
+<div class="menu-item" id="sandwiches">
     <img src="chilli-garlic-toast-url.jpg" alt="Chilli Garlic Toast">
     <h3>Chilli Garlic Toast</h3>
     <p>49</p>
@@ -289,6 +292,9 @@
     </div>
     <button class="add-to-cart" onclick="addToCart('veggie-delight-url.jpg', 'Veggie Delight', 119, 'quantity-veggie-delight')">Add to Cart</button>
 </div>
+            </div>
+
+            
 <div class="menu-category" onclick="toggleMenu('pizza')">Pizza</div>
 <div class="menu-item">
     <img src="regular-pizza-url.jpg" alt="Regular Pizza">
