--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
                 
 <div class="menu-category" onclick="toggleMenu('sandwiches')">Sandwiches</div>
-<div class="menu-item" id="sandwiches">
+<div class="menu-items" id="sandwiches">
     <div class="menu-item">
     <img src="chilli-garlic-toast-url.jpg" alt="Chilli Garlic Toast">
     <h3>Chilli Garlic Toast</h3>
