--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                     </div>
                     <button class="add-to-cart" onclick="addToCart('thick-cold-coffee-url.jpg', 'Thick Cold Coffee', 69, 'quantity-thick-cold-coffee')">Add to Cart</button>
                 </div>
-                <div class="menu-item">
-    <img src="hot-chocolate-url.jpg" alt="Hot Chocolate">
+                <div class="menu-item"> 
+                    <img src="hot-chocolate-url.jpg" alt="Hot Chocolate">
     <h3>Hot Chocolate</h3>
     <p>69</p>
     <div class="quantity-controls">
@@ -233,6 +233,7 @@
     </div>
     <button class="add-to-cart" onclick="addToCart('kitkat-milkshake-url.jpg', 'Kitkat Milkshake', 139, 'quantity-kitkat-milkshake')">Add to Cart</button>
 </div>
+            </div>
 
 
                 
