--- a/index.html
+++ b/index.html
@@ -298,7 +298,8 @@
 
             
 <div class="menu-category" onclick="toggleMenu('pizza')">Pizza</div>
-<div class="menu-item">
+<div class="menu-items" id="pizza">
+    <div class="menu-item">
     <img src="regular-pizza-url.jpg" alt="Regular Pizza">
     <h3>Regular Pizza</h3>
     <p>49</p>
@@ -375,6 +376,9 @@
     </div>
     <button class="add-to-cart" onclick="addToCart('sweet-corn-double-cheese-url.jpg', 'Sweet Corn Double Cheese', 139, 'quantity-sweet-corn-double-cheese')">Add to Cart</button>
 </div>
+</div>
+
+    
 <div class="menu-category" onclick="toggleMenu('banjos')">Banjos</div>
 <div class="menu-item">
     <img src="potato-cheese-banjo-url.jpg" alt="Potato Cheese Banjo">
