--- a/index.html
+++ b/index.html
@@ -380,7 +380,8 @@
 
     
 <div class="menu-category" onclick="toggleMenu('banjos')">Banjos</div>
-<div class="menu-item">
+<div class="menu-items" id="banjos">
+    <div class="menu-item">
     <img src="potato-cheese-banjo-url.jpg" alt="Potato Cheese Banjo">
     <h3>Potato Cheese Banjo</h3>
     <p>79</p>
